Update 6.1P Chameleon T2_2023.md

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -148,7 +148,7 @@ Evoleon Mobile Application (_sub project 2_)
 
 - Data Science Leads:Shanuk Julian Devamulla,Keefe Euler Alpay, Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware 
 - Web Development Lead: Jiahao Pen, Yashika Arora
-- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang
+- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang, Mariam Kassar
 
 
 <h4 style="color:#336699; text-align:left;">Chameleon Website</h4>
@@ -327,7 +327,7 @@ The main focus is to apply the new API for the Melbourne Open Data Playground to
 
 The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to create new use cases and also have enough in the backlog for trimester 3.
 
-The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only for the City of Melbourne Project project but also throughout the whole of Chameleon to ensure that all projects are up to par when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the securiity team will ensure the best practices are being implemented.
+The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only for the City of Melbourne Project project but also throughout the whole of Chameleon, to ensure that all projects are up to par when it comes to security, all tests will be reported, and if there are any major issues detected within any of the projects, the security team will ensure the best practices are being implemented.
 
 
 #### Deliverables
@@ -347,7 +347,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 #### Current Progress
 The Data Science team has brainstormed a new set of use case ideas that fits the 3 defined key areas of interest for the City of Melbourne and began working on them. The team also continues to work on repointing the APIs for the published notebooks to API 2.0 and 2.1. 
 
-The Cyber Security team has... 
+The Cyber Security team has inspected the source code for vulnerabilities, Ports for the website have been scanned (5 ports were found open), the website has been stress tested for high amounts of traffic in small periods of time, Traversal attacks have been tested and failed against the website, XML Attack has been tested, and Cross-Site Scripting (XSS) has been tested for the MOP site. 
 
 The web dev team has updated the missing pages of the MOP website, the team then successfully displayed these missing pages on the website home page and solved the consistency issues on most of the user case page design.
 
@@ -356,7 +356,7 @@ The web dev team has updated the missing pages of the MOP website, the team then
 The list below outlines the team's main achievements so far:
 - Completed defining a series of use cases to be explored by the DS team.
 - Presented new use case ideas to the client at the City Of Melbourne.
-- All the missing pages of the website have been fixed and displayed properly on home page.
+- All the missing pages of the website have been fixed and displayed properly on the home page.
 - The consistency issues of web design on most user case pages have been fixed.
 
 
@@ -364,7 +364,7 @@ The list below outlines the team's main achievements so far:
 #### Next Steps
 The Data Science team will continue to work on the incoming sprints, which consists of various use case analysis and repointing of API from published use cases. The team will reconvene to conceptualise new use cases as new backlog items ready for future deliverables for the next trimesters.
 
-The Security team will...
+The Security team will complete a variety of different vulnerability tests and attacks, e.g., Port scans, etc. on the new MOP website, planning for trimester 3 MOP security team e.g., developing a Security channel under MOP, developing  a getting started folder with relevant resources and tips for commencing students for Project A Security team.
 
 The web dev team will continue to work on publishing new user case pages and resolve design issues on the missing pages that have been displayed on the home page. Moreover, the team will try to fix deployment issues and develop more new functions for our website.
 
@@ -394,9 +394,9 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | As a participant of the Chameleon (MOP) Web Development Team, my responsibilities encompassed resolving the issue related to four use cases that were not appearing on our website's homepage. I meticulously examined and improved these use cases, namely Event-Disruption, Residential_Dwelling_Profile, Entertainment_Location_Projection, and Smart_Bin_&_Disposal_Optimization, ensuring their uniform and visually pleasing presentation to users. As the project unfolded, I was assigned by the leadership team to offer guidance and mentorship to a junior team member. This entailed clarifying tasks and steering her in approaching her designated use case, "Pedestrian_Safety_Part2," within the project's first phase.|
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  | Researched about the Company, its project, goals and current progress. Communicated with team lead for guidance, and understood about my responsibilities and the tasks assigned to me. Set up the environment after troubleshooting the errors. Then worked on fixing up the missing use case page named 'Pedestriansafety part 2' to make it shown on our homepage of our website. |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users the website can take. |
-| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | Actively contributed to all Security and Evoleon squad meetings, Held a security meeting and also completed that meeting’s meeting minutes, Attended most leadership meetings, Presented at the MOP client meeting on behalf of the security team, Read through and edited the MOP security audit, Helped edit Company 2.1P task, co-ran a cross-site scripting attack on the MOP website with both Daniel D’Amore for the first half and Mariam Kassar for the second half, and found seven potential vulnerable pages, Allocated tasks to help complete the cross-site scripting attacks, Researched different Firebase security rules for Evoleon team, Currently finishing cross-site scripting attack, creating Firebase rules and creating a security channel with a getting started folder for students starting next term. |
+| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | Actively contributed to all Security and Evoleon squad meetings, Held a security meeting and also completed that meeting’s meeting minutes, Attended most leadership meetings, Presented at the MOP client meeting on behalf of the security team, Read through and edited the MOP security audit, Helped edit Company 2.1P task, co-ran a cross-site scripting attack on the MOP website with both Daniel D’Amore for the first half and Mariam Kassar for the second half, and found seven potential vulnerable pages, Allocated tasks to help complete the cross-site scripting attacks, Researched different Firebase security rules for Evoleon team, Currently finishing cross-site scripting attack, creating Firebase rules and creating a security channel with a getting started folder for students starting next trimester. |
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes | Took initiative to present the presentation when the presenter was absent from the presentation class and hosted a weekly meeting to ensure that every team member was communicating their progress on their  assigned task for the company's projects. Research document-based cross-script attacks by adding an additional Trello board task in terms of attempts and evaluation based on the failed attempt. The research document also details the severity of cross-script attacks on projects. |
-| **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
+| **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | Actively participated in all Security and leadership meetings, held a security team meeting, took meeting minutes, read through and edited the MOP security audit, researched Cross-Site Scripting, co-ran a cross-site scripting attack with Ambre Sarrazin and discovered four possible attacking vectors, presented on behalf of Chameleon with four other students for the MOP Junior presentation, developed a roadmap for the security team, and began a Port Scan for the Chameleon website. I am also an InnoFes MOP representative, and I will be speaking on Chameleon's behalf for the Junior presentation on week 7. Also, developing resources for the getting started folder for students in the security team starting in Trimester 3. |
 | **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | I tried to do the SQL injection login bypass and failed and performed some vulnerability scan and found some vulnerabilities |
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | Researched cyber threats and vulnerabilities, emphasizing SQL injection attacks. Tried a SQL injection attack on the contact page, but it failed due to the missing database vulnerability. I'm currently learning how to use HTTP Strict Transport Security (HSTS) to improve the security of a website by requiring secure connections. I also utilized the OWASP ZAP tool to do a vulnerability assessment on the website to search for possible vulnerabilities. | 
 | **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | Running vulnerability scans using different tools to identify possible attacks the MOP site is vulnerable to, researching which of these vulnerabilities can be exploited and running an XML attack on the MOP site |  
@@ -426,7 +426,7 @@ It will be necessary for the Chameleon Website to showcase all the other project
 Overall, optimising the user website experience and reducing awkwardness is the primary aim for this trimester. 
 
 #### Web Dev Team Progress 
-This trimester, we have researched the ideal webmail API to use for the platform (Mailgun), began implenting the design teams design changes, decided upon what content should be placed in the resources section, and added new pages to accomodate the new content in the resources section. Updates and improvements have been made to the blog page, and a CSS framework (Bootstrap) has been decided upon to ensure consistincy across how stylings are written. SEO stratgies have also been researched. 
+This trimester, we have researched the ideal webmail API to use for the platform (Mailgun), began implenting the design team's design changes, decided upon what content should be placed in the resources section, and added new pages to accomodate the new content in the resources section. Updates and improvements have been made to the blog page, and a CSS framework (Bootstrap) has been decided upon to ensure consistincy across how stylings are written. SEO stratgies have also been researched. 
 
 
 #### Web Design Team Progress
@@ -460,7 +460,7 @@ The design team will focus on working with the EV and MOP team leaders to comple
 | :-- | :-- | :-: | :-: | :-: | :-: | :-: |
 | **Jon Suwannakoot** | 220069966 | Undergrad | Senior | Project Lead, Design Team Lead | Yes | As the project leader, I presented the Chameleon website to junior students in week 1 to attract new students to our project. Afterwards, I allocated students to appropriate Chameleon Projects based on their skills as part of onboarding. Then, I ensure that the Trello board is up-to-date. Also, I hosted and completed meeting minutes and created the new logos for the Chameleon website and MOP projects as part of the design team tasks. Finally, I wrote the guideline on using GitHub Desktop as part of an onboarding for junior students. |
 | **Brodie McCann** | 219307567 | Undergrad | Junior | Design Team Co-leader | Yes |  |
-| **Aaron James Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
+| **Aaron James Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on the Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
 | **Davinderjit Singh** | 219606745 | Undergrad | Senior | Dev Team | Yes |  |
 | **SATYAM Raina** | 222196882 | Undergrad | Junior | Dev Team | Yes |   |
 | **Mukund Nivas Srinivasan** | 219436166 | Undergrad | Junior | Dev Team | Yes |  |
@@ -476,8 +476,8 @@ The design team will focus on working with the EV and MOP team leaders to comple
 | **George Chia** | 219600175 | Undergrad | Junior | Dev Team |  |  |
 | **Navin Selvaraj** | 222056367 | Undergrad | Junior | Dev Team |  |  |
 | **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  | In the first week, I started learning about GitHub and the Trello board from the resources given by the senior team. Attended every scheduled class as well as the weekly mentor meetings. Assigned myself to a few tasks from the Trello board and started working on them. One task assigned to me is completed. The completed task is the blog/news page task. Where the customers can see the latest updates happening to the project posted by the administrator. On the other two tasks, I have started to work already. Right now, I am working on staff login portal task which allows to have a separate login page for the staff. And the feature for that task includes login, sign up, and reset password. |
-| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |Week 1-3, researched about the company, its projects, their goals and current progress, watched the recording of lectures, team meetings and read the meetings as I was unable to join them untill the 3rd of August. Week 4 – 5, participated in mentor and team meetings,fully rewrote the code for the landing page to align it with the reference from the designers team which was received on the 4th of August. Helped with the guidance 2 fellow students who reached out with the request of help. Adjusted the functioning and scaling of the landing page for tablet and mobile version. Wrote the code for a chat bot on a landing page. Prepared the hosting and url for getting our website live as soon as the code is approved by the team. |
-| **MATHEESHA NIRVAN PALLIYAGURUGE** | 222506155 | Undergrad | Junior | Dev Team |  | Upskilled myself about the unit, project details and what specific needs from me. Researched about what webmail API would be much preferred for the chameleon website. Researched about how to publish the chameleon website with URL. Attended weekly mentor meetings and team meetings. Been in communication with the senior members on to get more in-depth knowledge about the uni and the project. |
+| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |Week 1-3, researched about the company, its projects, their goals, and current progress, watched the recording of lectures, team meetings and read the meetings as I was unable to join them until the 3rd of August. Weeks 4 – 5, participated in mentor and team meetings, fully rewrote the code for the landing page to align it with the reference from the designers team which was received on the 4th of August. Helped with the guidance 2 fellow students who reached out with the request of help. Adjusted the functioning and scaling of the landing page for tablet and mobile version. Wrote the code for a chat bot on a landing page. Prepared the hosting and url for getting our website live as soon as the code is approved by the team. |
+| **MATHEESHA NIRVAN PALLIYAGURUGE** | 222506155 | Undergrad | Junior | Dev Team |  | Upskilled myself about the unit, project details, and what specific needs from me. researched what webmail API would be much preferred for the Chameleon website. Researched about how to publish the Chameleon website with URL. Attended weekly mentor meetings and team meetings. Been in communication with the senior members on to get more in-depth knowledge about the uni and the project. |
 | **Yawen Liu** | 218616602 | Undergrad | Junior | Dev Team |  |  |
 | **Pranshul** | 222196274 | Undergrad | Junior | Dev Team |  |  |
 | **LIYA THOMAS** | 222506155 | Undergrad | Junior | Dev Team | Yes |  |
