Update 6.1P Chameleon T2_2023.md
- Update MOP team member achievements

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -375,7 +375,7 @@ The web dev team will continue to work on publishing new user case pages and res
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
 | **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Senior | MOP Project Co-Lead, Data Science | Yes | Being MOP project lead, I have assisted, organised, and presented for Junior onboarding. Hosted and organised leadership and project meetings with technical demonstrations. Reviewed and merged project-related pull requests on GitHub. Organised and managed project Trello board. Organised and participated in the MOP 1st client meeting. Collaborated with other project leads on contributing to the company report and trying to resolve the ongoing MOP website GCP issue. Created and demonstrated Trello board and CoM API key registration tutorials. Reworked Smart Bin use case with updated data source and new data handling method, implemented AI/ML model to generate insights from the dataset.|
 | **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead, Cyber Security | Yes | Within my role as project co-lead I have helped with all company tasks, 2.1P and 6.1P. I am also on the InnoFes committee for Chameleon and am responsible for all of the Chameleon aspects and products to be made for InnoFes. In addition to this, I ran the client meeting and organised our meeting time with our client Remi Cattier. I was also a presenter of the week 4 junior lecture update. |
-| **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | |
+| **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | I am debugging an earlier published use case and after changing the API from v1 to v2.1. This ivolved finding the original datasets on the website, retriving the new API and then aligning the table with the code already built up last trimester/before. Planning to work on another publish use case and change the API to v2.1 by the end of this week.|
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | I'm currently working on a use case to understand pedestrian accidents and how age affects them. It focuses on solutions like giving older people and disabled people more time to cross the road using touch cards so far, data extraction has been done after choosing the data for analysis. |
 | **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes | |
@@ -384,13 +384,13 @@ The web dev team will continue to work on publishing new user case pages and res
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  I developed a new use case and set up three new APIs. I filtered the APIs to receive only the necessary data and combined them into one dataframe. After removing duplicates, I implemented code to find the closest piece of art to the user's location. I also added links for users to view the art. Using the Google API, I converted coordinates into addresses. The distance to each piece of art is also displayed. Furthermore, I integrated a map, expanded on the use case, and created another version to locate the nearest bar.|
 | **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | I created a new use case - A preview of the changes in the city of Melbourne, and obtained data through APIs and performed data extraction. And pushed my work to my GitHub playground.|
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | I have updated the spot parking use case to api 2.1. This required updating 3 datasets and filtering them. Afterwards, I had to fix the interactive widget. I'm currently debugging it. I've also begun work on a new use case about pedestrian traffic and banner pole placements. |
-| **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  |  |
-| **Siju Deng** | 222376251 | Postgrad | Junior | Data Science |  |  |
+| **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | I created a new use case revolving around Urban greening where city officials can implement more recreational spaces by looking at the data of trees and public barbecues. I have retrieved data for this use case through the API that will be ready for data analysis. I have also been using Github to push to the repository. |
+| **Siju Deng** | 222376251 | Postgrad | Junior | Data Science |  | Parking availability files are being processed. Updated api2.1. Request a new api key. Continue the code rewriting started last semester. The discovery history file has never been run since it was completed two years ago. What is pushed is just the operation tutorial. Rewriting code still requires local deployment. I have done local deployment. However, the deployment time needed to analyze the required data was too long and not reproducible due to the use of local files. Now it is being completely refactored and overthrown. Change the design purpose. A whole new data exploration is underway. |
 | **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | | My use case that I’ve developed aims to deliver a tool for tourists visiting Melbourne city to create a unique walking experience with recommendations of landmarks and places of interest customised to their preference. So far, I have successfully extracted two datasets from the client website via API, processed the data into dataframe and merged them based on their longitude and latitude coordinates. I have grouped the landmarks and places of interest by their categories and the proximity from each other so that for every walk a tourist chooses to do, they can input their preference or areas of interest, and the tool would provide a list of relevant landmarks within a pre-determined walking distance parameter.  |
 | **Prathibha Kandawala** | 222440671 | Postgrad | Junior | Data Science |  | I began learning about GitHub and Trello through team resources, upskilled in unit and project understanding, and initiated data retrieval.|
 | **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | Update tutorial documents and record tutorial videos. Update the email address which within sending email functionality. Sort out and allocate tasks to teammates, divide the team into two different teams to work on specific tasks. I mainly update old design for 4 previous user cases pages in total. |
 | **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | Setting up the Environment, Presenting the team for junior and senior meeting, getting 3 use case pages fixed before the deadline even after all the issues with environment setup, getting multiple Linked Learning certificates for upskilling, additionally working on a documentation which includes all the issues faced, the solution and what can be done differently in next trimester. |
-| **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  |  |
+| **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  | set up the environment, changes made to ideal-green-wall-location use case. |
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | As a participant of the Chameleon (MOP) Web Development Team, my responsibilities encompassed resolving the issue related to four use cases that were not appearing on our website's homepage. I meticulously examined and improved these use cases, namely Event-Disruption, Residential_Dwelling_Profile, Entertainment_Location_Projection, and Smart_Bin_&_Disposal_Optimization, ensuring their uniform and visually pleasing presentation to users. As the project unfolded, I was assigned by the leadership team to offer guidance and mentorship to a junior team member. This entailed clarifying tasks and steering her in approaching her designated use case, "Pedestrian_Safety_Part2," within the project's first phase.|
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  | Researched about the Company, its project, goals and current progress. Communicated with team lead for guidance, and understood about my responsibilities and the tasks assigned to me. Set up the environment after troubleshooting the errors. Then worked on fixing up the missing use case page named 'Pedestriansafety part 2' to make it shown on our homepage of our website. |
 | **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users the website can take. |
