--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -426,13 +426,15 @@ It will be necessary for the Chameleon Website to showcase all the other project
 Overall, optimising the user website experience and reducing awkwardness is the primary aim for this trimester. 
 
 #### Web Dev Team Progress 
+
 This trimester, we have researched the ideal webmail API to use for the platform (Mailgun), began implenting the design teams design changes, decided upon what content should be placed in the resources section, and added new pages to accomodate the new content in the resources section. Updates and improvements have been made to the blog page, and a CSS framework (Bootstrap) has been decided upon to ensure consistincy across how stylings are written. SEO stratgies have also been researched. 
 
-
 #### Web Design Team Progress
+
 This trimester, we focused on redesigning the Chameleon website so all pages are consistent. Then the web development team can base their code on that design. Thus, the final product of our website will be high usability with consistency. We also create new logos for our Chameleon website and MOP, showing our company's values to the public.  
 
 #### Our main achievements so far are listed below:
+
 - Create the Chameleon website that is both visually appealing and easy to navigate, using the provided design from the design team as a guide
 - Redesign the EV website: Signin, About Us and FAQ
 - Redesign the Chameleon website: Homepage, About Us, Latest News, Profile, Login, Signup and Reset Password
@@ -442,6 +444,7 @@ This trimester, we focused on redesigning the Chameleon website so all pages are
 - Begin implementation of new high-fidelity designs.
 
 #### Next Steps
+
 The next steps for the remainder of this trimester is to update the frontend code of the website to match the designs as produced by the design team, as well as work on the backend to create a database for storing information and implementing the Mailgun API.
 
 The design team will focus on working with the EV and MOP team leaders to complete design their websites and mobile applications. We will develop the remaining pages of the Chameleon website for the web development team to work on so they have high usability and consistency.   
@@ -459,26 +462,25 @@ The design team will focus on working with the EV and MOP team leaders to comple
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-: |
 | **Jon Suwannakoot** | 220069966 | Undergrad | Senior | Project Lead, Design Team Lead | Yes | As the project leader, I presented the Chameleon website to junior students in week 1 to attract new students to our project. Afterwards, I allocated students to appropriate Chameleon Projects based on their skills as part of onboarding. Then, I ensure that the Trello board is up-to-date. Also, I hosted and completed meeting minutes and created the new logos for the Chameleon website and MOP projects as part of the design team tasks. Finally, I wrote the guideline on using GitHub Desktop as part of an onboarding for junior students. |
-| **Brodie McCann** | 219307567 | Undergrad | Junior | Design Team Co-leader | Yes |  |
+| **Brodie McCann** | 219307567 | Undergrad | Junior | Design Team Co-leader | Yes | Created high fidelity prototypes and storyboards for the Chameleon Website. The new designs were aimed at enhancing the overall user experience so that content is effectively communicated, and the website is visually appealing and easy to navigate. The addition of new functions and features like the Chameleon chatbot and suggested user content, can be developed down the track to provide assistance and make for a more personalised user experience. Started drafting Chameleon style guide for web designs. |
 | **Aaron James Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
-| **Davinderjit Singh** | 219606745 | Undergrad | Senior | Dev Team | Yes |  |
-| **SATYAM Raina** | 222196882 | Undergrad | Junior | Dev Team | Yes |   |
-| **Mukund Nivas Srinivasan** | 219436166 | Undergrad | Junior | Dev Team | Yes |  |
+| **Davinderjit Singh** | 219606745 | Undergrad | Senior | Dev Team | Yes | Made trello cards for other team members on the trello board. Completed my research on the SEO strategy for the Chameleon company and uploaded it on the trello board. Helping other team members and juniors on their issues and questions about the project via msteams. Finished my research on NPM and uploaded it to the trello board so that other team members can learn and start working with NPM. Started developing the About Us page for the chameleon company. |
+| **SATYAM Raina** | 222196882 | Undergrad | Junior | Dev Team | Yes |  Working with a team including both cohorts and seniors allowed me to outline the project I am in better. I helped the onboarding team members by providing them roadmap and necessary information. Designed company logo for Chameleon website though I wasn’t supposed to do this (It was design team’s work). But I posted it in the teams anyways as I took me a good amount of time and effort. I volunteered to present Week 4 Juniors presentation as a group work. I presented for 2 minutes on the deliverables our company aims for this trimester. I researched on topics such as Automated Email APIs (we concluded for Mailgun) and SSO API implementation. I made a Trello card for researching on SSO Implementation and uploaded a proposal documenting. |
+| **Mukund Nivas Srinivasan** | 219436166 | Undergrad | Junior | Dev Team | Yes | Conducted thorough research, engaged in discussions, and reviewed insights gleaned from other students' research. Consequently, a unanimous decision was reached regarding the implementation of CSS framework, Bootstrap. Uploaded videos on Bootstrap framework, intended to facilitate rapid and efficient learning for team members. Collaborated with Company's wider project teams and assisted with Company wide presentation on the lecture. Maintained a holistic perspective of the overarching objectives and aspirations of the Chameleon website project, thereby providing guidance and direction to fellow students on code-reviews, code shadowing, and others thereby facilitating the attainment of the organization's milestones. Aided fellow team members in the successful completion of their assigned tasks by offering structured approaches and guidance Effectively integrated the new component stylings into Blog/News section of the website. This update was informed by the outcomes of the frontend redesign. |
 | **Wei Liang Tiew** | 220427347 | Undergrad | Senior | Dev Team |  | Contributed partially to the landing page, and is currently working on the news page. |
-| **Nitin Singh Dogra** | 221265784 | Undergrad | Senior | Design Team |  |  |
-| **Bhavika Sood** | 218529556 | Undergrad | Senior | Dev Team |  |  |
-| **Jordan Reeves** | 217140954 | Undergrad | Senior | Dev Team |  |
-| **Seung Hwan Kim** | 221393121 | Undergrad | Senior | Dev Team |  |
-| **ZhuoYu Li** | 220283605 | Undergrad | Senior | Dev Team |  | |
-| **Ziyan Zhai** | 221208796 | Undergrad | Senior | Dev Team |  |
+| **Nitin Singh Dogra** | 221265784 | Undergrad | Senior | Design Team |  | I have created low fidelity designs for the about us page, login page, sign up page, FAQ page and footer. I have also created high fidelity designs for the login, sign up, footer and FAQ pages for the EV Adoption Website. Components and pages have been created with aesthetics and functionality as the foundation to promote user engagement and visibility. |
+| **Bhavika Sood** | 218529556 | Undergrad | Senior | Dev Team |  | I have completed about us page of website and working on news page. |
+| **Jordan Reeves** | 217140954 | Undergrad | Senior | Dev Team |  | Completed extensive research on API key security practices. Identified security concerns with current API key storage solution.Generated research and proposal documentation for a secure API key storage solution via API proxy. Begun implementation of API proxy solution: created extensive contribution guidelines, example proxy API endpoint to aid in future endpoint implementations. |
+| **Seung Hwan Kim** | 221393121 | Undergrad | Senior | Dev Team |  | Continue to review recorded weekly class and meeting records and improve skills in Trello and Git. Receive the design of the login page and created a front-end page. Created tables to be used in MySQL for backend progress. |
+| **ZhuoYu Li** | 220283605 | Undergrad | Senior | Dev Team |  | I have written a research report about the email API mailchimp, describing its main functions, how to register, and a tutorial on how to obtain the mailchimp API. I have written a research report on Bootstrap, which includes its main features, advantages and disadvantages, as well as how to install Bootstrap. |
+| **Ziyan Zhai** | 221208796 | Undergrad | Senior | Dev Team |  | Complete API research report based on SendGrid. Complete CSS framework report based on Tailwind. Prepare how to use Bootstrap for the project. |
 | **Thomas Koutsaplis** | 220233577 | Undergrad | Senior | Dev Team |  | Created a document summarising research on email API providers. Created a guideline on how to assess Chameleon's website's current SEO performance and methods to improve the SEO performance. |
-| **Aye Moh Moh Shwe** | 220462239 | Undergrad | Senior | Dev Team |  |
-| **George Chia** | 219600175 | Undergrad | Junior | Dev Team |  |  |
-| **Navin Selvaraj** | 222056367 | Undergrad | Junior | Dev Team |  |  |
-| **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  | In the first week, I started learning about GitHub and the Trello board from the resources given by the senior team. Attended every scheduled class as well as the weekly mentor meetings. Assigned myself to a few tasks from the Trello board and started working on them. One task assigned to me is completed. The completed task is the blog/news page task. Where the customers can see the latest updates happening to the project posted by the administrator. On the other two tasks, I have started to work already. Right now, I am working on staff login portal task which allows to have a separate login page for the staff. And the feature for that task includes login, sign up, and reset password. |
-| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |Week 1-3, researched about the company, its projects, their goals and current progress, watched the recording of lectures, team meetings and read the meetings as I was unable to join them untill the 3rd of August. Week 4 – 5, participated in mentor and team meetings,fully rewrote the code for the landing page to align it with the reference from the designers team which was received on the 4th of August. Helped with the guidance 2 fellow students who reached out with the request of help. Adjusted the functioning and scaling of the landing page for tablet and mobile version. Wrote the code for a chat bot on a landing page. Prepared the hosting and url for getting our website live as soon as the code is approved by the team. |
+| **George Chia** | 219600175 | Undergrad | Junior | Dev Team |  | Research on SSO and MFA API. Wrote and uploaded about us page onto Trello. |
+| **Navin Selvaraj** | 222056367 | Undergrad | Junior | Dev Team |  | Completed a brief research on the documentation standards and naming methodologies and conventions, as this would help the future developers to understand the underlying code and makes it easier to maintain and update. |
+| **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  | Assigned myself to a few tasks from the Trello board and started working on them. One task assigned to me is completed. The completed task is the blog/news page task. Where the customers can see the latest updates happening to the project posted by the administrator. On the other two tasks, I have started to work already. Right now, I am working on staff login portal task which allows to have a separate login page for the staff. And the feature for that task includes login, sign up, and reset password. |
+| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  | Week 1-3, researched about the company, its projects, their goals and current progress, watched the recording of lectures, team meetings and read the meetings as I was unable to join them untill the 3rd of August. Week 4–5, participated in mentor and team meetings,fully rewrote the code for the landing page to align it with the reference from the designers team which was received on the 4th of August. Helped with the guidance 2 fellow students who reached out with the request of help. Adjusted the functioning and scaling of the landing page for tablet and mobile version. Wrote the code for a chat bot on a landing page. Prepared the hosting and url for getting our website live as soon as the code is approved by the team. |
 | **MATHEESHA NIRVAN PALLIYAGURUGE** | 222506155 | Undergrad | Junior | Dev Team |  | Upskilled myself about the unit, project details and what specific needs from me. Researched about what webmail API would be much preferred for the chameleon website. Researched about how to publish the chameleon website with URL. Attended weekly mentor meetings and team meetings. Been in communication with the senior members on to get more in-depth knowledge about the uni and the project. |
-| **Yawen Liu** | 218616602 | Undergrad | Junior | Dev Team |  |  |
-| **Pranshul** | 222196274 | Undergrad | Junior | Dev Team |  |  |
-| **LIYA THOMAS** | 222506155 | Undergrad | Junior | Dev Team | Yes |  |
-| **VISHNU** | 222357806 | Postgrad | Junior | Dev Team |  |  |
+| **Yawen Liu** | 218616602 | Undergrad | Junior | Dev Team |  | Designed and crafted the FAQ page for the Chameleon website, ensuring user queries are addressed effectively while aligning with the brand's aesthetics. Currently refining the website's header and footer, focusing on intuitive navigation and brand consistency, enhancing user experience. |
+| **Pranshul** | 222196274 | Undergrad | Junior | Dev Team |  | Employed React.js to enhance the responsiveness of web pages, ensuring they adapt seamlessly to various screen sizes and devices.Utilized responsive design techniques like media queries and flexbox/grid layouts to achieve consistent user experiences. Code Refactoring for Neatness: Streamlined the codebase by eliminating redundancy, enhancing code readability, and adhering to best practices. Reduced duplicated functions, making the codebase more maintainable and efficient. Pop-up Notification Implementation: Currently in progress, the pop-up notification feature is being developed to provide users with instant alerts or messages. |
+| **LIYA THOMAS** | 222506155 | Undergrad | Junior | Dev Team | Yes | Researched on implementing SSO and MFA APIs to the project and added pdf on trello board. Researched about css framework and posted a pdf on trello for the the peermates. Researched email API's (SendGrid and Mailchimp) and determined mailchimp most suitable option for sending automated emails to clients and end-users. Researched about SEO. Worked on resource page and collected the topics to be added. Researched on CSS naming methodology. (Like BEM) for front end documentation |
+| **VISHNU** | 222357806 | Postgrad | Junior | Dev Team |  | Thoroughly analyzing all the provided materials, attending and re-watching class meetings and material provided in the teams channel and unit site, actively engaging with team leaders and members. Intiated reviewing, analysing, implementing, repeat process on Trello, and I'm upskilling by learning about Git and other tools from the unit site links. |
