Update 6.1P Chameleon T2_2023.md - Yesini

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -243,14 +243,16 @@ Web Dev
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
 | **Yesini Charithma Liyanage** | 222063923 | Undergrad | Senior | Web Dev | Yes | As EVCFLO’s project lead, my contributions encompass a range of initiatives, from chairing all team meetings, to producing technical documentation for GCP deployment, working with unit staff to establish a LinkedIn page for Chameleon and developing an "About Our Team" page for EVCFLO's website, organizing documentation folders, structuring Trello and GitHub repositories, offering cross-project technical support, implementing DevOps methodologies for team workflow, crafting user stories, optimizing onboarding processes, showcasing technical leadership through Trello and GitHub oversight, and presently, contributing to the design of prototypes and modifications for the EVCFLO website. |
 | **Jamie Connor Davidson** | 222356461 | Postgrad | Senior | Data Science | Yes | I have so far managed the data science team, I organised tasks using Trello and setup our GitHub repository to help with onboarding for T2-2023. I created a roadmap divided into five bi-weekly sprints, Sprint 1, I creating a useful notebook for generating up-to-date station location datasets. In Sprint 2, I provided the team with an automated notebook that produced a reference HTML document for dataset summary information, enhancing the project's accessibility and documentation. Moving forward, I will be coordinating the team to help showcase our deliverables and provide impactful data-driven solutions onto the EVCFLO website. |
-| **Jennifer Yau** | 222087183 | Postgrad | Junior | Data Science | Yes | |
-| **Yuvraj Sekhon** | 222184401 | Undergrad | Junior | Data Science |  |  |
+| **Jennifer Yau** | 222087183 | Postgrad | Junior | Data Science | Yes | I have contributed to the user story document and to the Trello board to make action cards on what I can contribute to the company. I did the research on the EV car and station, and also for the handle missing data in the prediction model. My technical contribution has handled the missing data regarding to the Australia EV database. And also the correlation analysis between all the features. Now i am starting to prepare the coding for regression analysis based on the database. |
+| **Yuvraj Sekhon** | 222184401 | Undergrad | Junior | Data Science |  |  I initiated the project by thoroughly researching available data on EV stations in Melbourne. I've now seamlessly transitioned to utilizing Tableau for impactful data visualizations. |
 | **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev | Yes |Helped create Trello board tasks and organise team meetings for team members. Created a roadmap document at the beginning of the trimester to ensure work stayed on track and cleaned the GitHub Repo before the trimester began to ensure no unused branches could cause confusion. Gained access to the Google Cloud Platform project, including increased permissions to allow an eventual CI/CD pipeline to be built. Technical contribution is the revamped news page, which displays the latest news articles in a grid, using the newsAPI to collect news stories from websites. Am currently implementing a continuous integration pipeline in the GCP. |
 | **Ishika Khanna** | 219551957 | Undergrad | Senior | Web Dev | Yes |  | 
 | **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Senior | Web Dev |  | I have contributed good ideas to the react project. My contributions includes creating an accessories and spare parts page which contains a form regarding the spare parts and accessories of the electric vehicle chargers and electric charging points for businesses, and using this form a business can  order spare parts, accessories or request an electric charging point in their business location from the website through the form. I have also created a certificate page which will include any certificates that chameleon gets in the future to show the achievements of the company.  |
-| **Hoi Fung Dicky** | 222383729 | Postgrad | Junior | Web Dev |  | |
+| **Hoi Fung Dicky** | 222383729 | Postgrad | Junior | Web Dev |  | I have created a chatbot webpage that allows users to interact with the tool. I have designed the webpage to match the original style and theme of the home page, using the same colors, fonts and layout. I plan to add more functions and features to the chatbot, such as voice input, natural language processing, data visualization and user authentication.|
 |**Shuodong Xing**| 219368407 | Undergrad| Junior| Web Dev| | Created more user options, updated reset password function, and implemented function to send users reset password emails. |
 |**Auth Chanakijkamjorn**| 218033849 | Undergrad| Junior| Web Dev| | I begin with researching about EV car and station and creating user story for EVCFLO website. I reviewed a week 3 meeting and getting access to team Trello board and Github. I attend a weekly meeting to update my task for everyone in the team and then I study and learn about React JS, component and other topics that related to our project. Now I’m starting to create a webpage for EVCFLO website. |
+| **Siju Deng**| 222376251 | Postgrad | Junior | Data Science | | I uploaded the International Energy Agency (IEA) global electric vehicle data and national policies. Created a visualization using power BI. Contains usage instructions for global electric vehicle data, country comparison and annual growth of electric vehicle sales and charging stations. Created a data analysis juypter file. Calculate the annual growth rate based on historical data from the IEA. Using the existing charging pile data, estimate the number of charging piles in each city in 2024.|
+| **Marven Praneeth Jayawardena**| 220263477 | Undergrad | Web Dev | | I have created a chatbot webpage that allows users to interact with the tool. I have designed the webpage to match the original style and theme of the home page, using the same colors, fonts and layout. I plan to add more functions and features to the chatbot, such as voice input, natural language processing, data visualization and user authentication.|
 
 <br> <a name="App dev"></a><h2 style="color:#4CB166">Evoleon</h2>
 <h4 style="color:#00A688">Overview</h4>
